changes in academie and descipline